# operational_system_group

./: .gitignore  CMakeLists.txt  a.out  customfunctions.c  customfunctions.h  file1.txt  filecopy.c  main.c  treecopy.c
PP_01/: README.md  customfunctions.h  erros_traducao.csv  filecopy.c
PP_02/: error_handles.c  error_handles.h  infinit_loop.sh  mycript.sh  myshell  myshell.c
PP_03/: calcpi.c  exec_tests.sh  multmatriz.c  primo_mt.c  statistics_mt.c  testador.sh  utility.c  utility.h
PP_03/testes/: [10]calcpi_01.csv  [10]calcpi_02.csv  [10]calcpi_03.csv  [5]calcpi_01.csv  [5]calcpi_02.csv  [5]calcpi_03.csv  calcpi[10]_01.csv  calcpi[10]_02.csv  calcpi[10]_03.csv  calcpi[10]_04.csv  calcpi[10]_05.csv  calcpi[5]_01.csv  calcpi[5]_02.csv  calcpi[5]_03.csv  calcpi[5]_04.csv  calcpi[5]_05.csv  multmatriz[10]_01.csv  multmatriz[10]_02.csv  multmatriz[10]_03.csv  multmatriz[10]_04.csv  multmatriz[10]_05.csv  multmatriz[5]_01.csv  multmatriz[5]_02.csv  multmatriz[5]_03.csv  multmatriz[5]_04.csv  multmatriz[5]_05.csv
PP_04/: q3.c  q4.c  utility.c  utility.h
